--- a/form.html
+++ b/form.html
@@ -11,7 +11,10 @@
 
 	<label for="last-name">Last Name</label>
 	<input type="text" id="last-name"/>
+	<br />
 
+	<label for="password">Password</label>
+	<input type="password" id="password" 
 	<input type="submit" value="submit!!!"/>
 </form>
 </body>
